force-app/main/default/objects/OrderSubmittedEvent__e/OrderSubmittedEvent__e.object-meta.xml
<CustomObject>
    <label>Order Submitted Event</label>
    <pluralLabel>Order Submitted Events</pluralLabel>
    <publishReplayEvents>true</publishReplayEvents>
    <fields>
        <fullName>OrderId__c</fullName>
        <label>Order ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RetailerId__c</fullName>
        <label>Retailer ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistributorId__c</fullName>
        <label>Distributor ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayloadJSON__c</fullName>
        <label>Payload JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>