force-app/main/default/objects/OrderSubmittedEvent__e/fields/DistributorId__c.field-meta.xml
<CustomField>
    <fullName>DistributorId__c</fullName>
    <label>DistributorId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>