force-app/main/default/objects/OrderSubmittedEvent__e/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <label>OrderId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>