force-app/main/default/objects/OrderSubmittedEvent__e/fields/PayloadJSON__c.field-meta.xml
<CustomField>
    <fullName>PayloadJSON__c</fullName>
    <label>PayloadJSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>