force-app/main/default/objects/OrderSubmittedEvent__e/fields/RetailerId__c.field-meta.xml
<CustomField>
    <fullName>RetailerId__c</fullName>
    <label>RetailerId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>